# appendlog-rs

./: CLAUDE.md  Cargo.toml  README.md
appendlog-actor/: CLAUDE.md  Cargo.toml
appendlog-actor/examples/: kv_store.rs  pipeline.rs
appendlog-actor/src/: actor.rs  bridge.rs  handler.rs  lib.rs  run.rs  state_store.rs
appendlog-mem/: Cargo.toml
appendlog-mem/examples/: simple.rs  threaded.rs
appendlog-mem/src/: lib.rs
appendlog-nats/: Cargo.toml
appendlog-nats/examples/: simple.rs
appendlog-nats/src/: consumer.rs  lib.rs  log.rs  otel.rs  state_store.rs
appendlog-traits/: Cargo.toml
appendlog-traits/src/: appender.rs  consumer.rs  index.rs  lib.rs  lookup.rs  record.rs
