[package]
name = "appendlog-actor"
version = "0.0.0"
edition = "2021"

[dependencies]
appendlog-traits = { path = "../appendlog-traits" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
async-nats = "0.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
appendlog-nats = { path = "../appendlog-nats", features = ["actor"] }
