[package]
name = "appendlog-nats"
version = "0.0.0"
edition = "2021"

[features]
actor = ["appendlog-actor"]

[dependencies]
async-nats = "0.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
appendlog-traits = { path = "../appendlog-traits" }
appendlog-actor = { path = "../appendlog-actor", optional = true }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
