[package]
name = "appendlog-nats"
version = "0.0.0"
edition = "2021"

[features]
actor = ["appendlog-actor"]
otel = ["opentelemetry", "tracing", "tracing-opentelemetry"]

[dependencies]
async-nats = "0.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
appendlog-traits = { path = "../appendlog-traits" }
appendlog-actor = { path = "../appendlog-actor", optional = true }
futures = "0.3"
opentelemetry = { version = "0.31", optional = true }
tracing = { version = "0.1", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
